--- a/CommandCenter/appsettings.json
+++ b/CommandCenter/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=postgres;Database=commandcenter;Username=postgres;Password=1234;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
