Add rabbitmq and first twitch stuff
Capture twitch chat messages.
Use TwitchChatEvent to pass through to CommandCenter
Store TwitchChatMessage in database
Setup environment variables

--- a/CommandCenter/appsettings.json
+++ b/CommandCenter/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=postgres;Database=commandcenter;Username=postgres;Password=1234;"
   },
+  "RabbitMQ": {
+    "Host": "rabbitmq://rabbitmq",
+    "Username": "commandcenter",
+    "Password": "1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
