--- a/TwitchHandler/appsettings.json
+++ b/TwitchHandler/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "RabbitMQ": {
+    "Host": "rabbitmq://rabbitmq",
+    "Username": "commandcenter",
+    "Password": "1234"
+  },
+  "Twitch": {
+    "Username": "TwitchUsername",
+    "OAuth": "TwitchOAuth",
+    "Channel": "ChannelName"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
