--- a/TwitchHandler/TwitchHandler.csproj
+++ b/TwitchHandler/TwitchHandler.csproj
@@ -10,12 +10,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="appsettings.Development.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="TwitchLib.Client" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
