--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,6 +16,22 @@ services:
         environment:
             POSTGRES_PASSWORD: 1234
             POSTGRES_DB: commandcenter
+            
+    rabbitmq:
+        image: rabbitmq:3-management
+        container_name: cc_rabbitmq_dev
+        hostname: rabbitmq
+        networks:
+            command_center:
+                aliases: 
+                    - rabbitmq
+        volumes:
+            - ./ccconfig/rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+            - ./ccdata/rabbitmq/data:/var/lib/rabbitmq/
+            - ./ccdata/rabbitmq/logs:/var/log/rabbitmq/
+        ports:
+            - 5672:5672
+            - 15672:15672
 
 networks:
     command_center:
