Rename rabbitmq container in production

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
 
     rabbitmq:
         image: rabbitmq:3-management
-        container_name: cc_rabbitmq_dev
+        container_name: cc_rabbitmq
         hostname: rabbitmq
         networks:
             command_center:
