Add Channel and loading channels for monitoring
Channel in DB (TODO: Add Twitch ID in)
TwitchHandler requests a list of channels to connect to (TODO: Support adding and removing channels while running)

--- a/TwitchHandler/TwitchHandler.csproj
+++ b/TwitchHandler/TwitchHandler.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="TwitchLib.Api" Version="3.1.4-CI-20200626-19" />
     <PackageReference Include="TwitchLib.Client" Version="3.1.5" />
   </ItemGroup>
 
